トップページアクションの作成

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -170,3 +170,9 @@ table#management_list .management_help {
 table#management_list .report_action {
     width: 20%;
 }
+pre {
+    font-family: "Hiragino Kaku Gothic Pro",Meiryo,"MS PGothic",Helvetica,Arial,sans-serif;
+}
+h3 {
+    font-size: larger;
+}
