--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -131,45 +131,51 @@ h1 a {
 table#management_list th {
     font-weight: bold;
     padding: 10px 2%;
+    font-size:15px;
+    text-align: center;
+}
+table#management_list td {
+    font-size:13px;
 }
 
 table#management_list .management_progess {
-    width: 25%;
-    padding: 10px 2%;
+    width: 10%;
+
 }
 table#management_list .management_manager {
-    width: 20%;
+    width: 9%;
 }
 table#management_list .management_projectnumber {
-    width: 40%;
+    width: 12%;
 }
 
 table#management_list .management_client {
-    width: 40%;
+    width: 12%;
 }
 
 
 table#management_list .management_quantity {
-    width: 20%;
+    width: 8%;
 }
 table#management_list .management_requester {
-    width: 20%;
+    width: 9%;
 }
 table#management_list .management_content {
-    width: 20%;
+    width: 10%;
 }
 table#management_list .management_deadline {
-    width: 20%;
+    width: 12%;
 }
 table#management_list .management_predict {
-    width: 40%;
+    width: 12%;
 }
 table#management_list .management_help {
-    width: 20%;
+    width: 9%;
 }
-table#management_list .report_action {
-    width: 20%;
+table#management_list .management_action {
+    width: 10%;
 }
+
 pre {
     font-family: "Hiragino Kaku Gothic Pro",Meiryo,"MS PGothic",Helvetica,Arial,sans-serif;
 }
